syntax = "proto3";

package pb;

import "player_game.proto";

option go_package = "github.com/PlatosCodes/desserted/backend/pb";

message ListGamePlayersRequest {
    int64 game_id = 1;
  }
  
  message ListGamePlayersResponse {
    repeated PlayerGame players = 1;
  }