syntax = "proto3";

package pb;

import "player_game.proto";

option go_package = "github.com/PlatosCodes/desserted/backend/pb";

message ListPlayerGamesRequest {
    int64 player_id = 1;
  }
  
  message ListPlayerGamesResponse {
    repeated PlayerGame player_games = 1;
  }